src/test/ui/issue-41652/issue_41652.stderr
error[E0689]: can't call method `f` on ambiguous numeric type `{integer}`
  --> $DIR/issue_41652.rs:19:11
   |
19 |         3.f()
   |           ^
help: you must specify a concrete type for this numeric value, like `u32`
   |
19 |         (3 as u32).f()
   |         ^^^^^^^^^^

error: aborting due to previous error

